--- a/app.css
+++ b/app.css
@@ -7,10 +7,14 @@
     padding: 0;
 }
 
-.project{
-    width:200px;
+.project {
+    width: 200px;
 }
 
-.project .card-body{
-    min-height:120px;
+.project .card-body {
+    min-height: 120px;
+}
+
+.desc {
+    color: #555;
 }
