--- a/admin_ui/admin/app.css
+++ b/admin_ui/admin/app.css
@@ -17,7 +17,7 @@ html, body, #app {
 }
 
 .side-bar {
-    background: #000;
+    background: #35363a;
     width: 250px;
     height: 100%;
     color: #fff;
@@ -25,28 +25,37 @@ html, body, #app {
 }
 
 .site-title {
-    font-size: 12px;
-    background: #262626;
-    height: 60px;
-    line-height: 60px;
-    font-size: 16px;
-    font-weight: 900;
+    font-size: 19px;
+    background: #000;
+    height: 20px;
+    padding: 15px 0 5px;
+    /* line-height: 60px; */
     text-align: center;
+    /* border:1px solid red; */
 }
 
 .menu, .menu-active {
     height: 49px;
     line-height: 49px;
-    padding: 0 0 0 40px;
+    padding: 1px 1px 1px 41px;
 }
 
 .menu {
     color: #fff;
 }
 
-.menu:hover {
-    background: #262626;
+.menu:hover, .menu-sub:hover {
+    background: #1f1f1f;
     cursor: pointer;
+    border: 1px dashed #fff;
+    padding: 0 0 0 40px;
+}
+
+.menu-sub {
+    height: 49px;
+    line-height: 49px;
+    padding: 1px 1px 1px 41px;
+    background: #1f1f1f;
 }
 
 .menu-active {
@@ -57,4 +66,21 @@ html, body, #app {
     height: 100%;
     width: 100%;
     border: 0;
+}
+
+.admin-control {
+    line-height: 25px;
+    border:1px solid #000;
+}
+
+.admin-control:hover {
+    cursor: pointer;
+    background: #1f1f1f;
+    border: 1px dashed #fff;
+}
+
+.admin-line {
+    text-align: center;
+    background: #000;
+    padding-bottom: 5px;
 }
