--- a/app.css
+++ b/app.css
@@ -16,5 +16,14 @@
 }
 
 .desc {
-    color: #555;
+    color: #999;
+}
+
+body{
+    background:#000;
+    /* color:#fff; */
+}
+
+#app{
+    color:#fff;
 }
