--- a/app.css
+++ b/app.css
@@ -1,38 +1,91 @@
-[v-cloak] {
-    display: none;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-.project {
-    width: 200px;
-}
-
-.project .card-body {
-    min-height: 120px;
-}
-
-.desc {
-    color: #999;
-}
-
 body {
-    background: #000;
-    /* color:#fff; */
+    background: #999;
+    padding: 20px 40px;
+}
+
+.filter button {
+    display: block;
+    margin-left: 0 !important;
+    margin-bottom: 10px;
+}
+
+.layui-btn-sm {
+    font-size: 14px;
+}
+
+.layui-btn-warm {
+    color: #000;
 }
 
 #app {
-    color: #fff;
+    display: flex;
 }
 
-a {
+nav {
+    background: #000;
     color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 45px;
+    z-index: 999;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 20px;
 }
 
-.tool a {
+.link a {
+    text-decoration: underline;
     display: inline-block;
-    margin:5px 10px;
+    margin: 5px;
+}
+
+.more {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+aside#left {
+    width: 160px;
+    margin-right: 20px;
+    position: fixed;
+}
+
+.logo {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+main {
+    width: 590px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    margin-left: 180px;
+}
+
+.go-to-top {
+    position: fixed;
+    z-index: 99999;
+    bottom: 10px;
+    right: 10px;
+    width: 80px;
+    height: 60px;
+    background: rgba(255, 255, 255, .2);
+    display: none;
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.go-to-top:hover {
+    cursor: pointer;
+}
+
+[v-cloak] {
+    display: none;
 }
