--- a/app.css
+++ b/app.css
@@ -9,6 +9,42 @@ body {
     margin-bottom: 10px;
 }
 
+.title-box {
+    padding: 5px 12px;
+    border-bottom: 1px solid #eee;
+}
+
+.title {
+    font: 14px Helvetica Neue, Helvetica, PingFang SC, Tahoma, Arial, sans-serif;
+    font-family: PingFang SC, Hiragino Sans GB, Microsoft YaHei, WenQuanYi Micro Hei, Helvetica Neue, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    list-style: none;
+    font-size: 20px;
+    line-height: 1.3;
+    font-weight: 600;
+    margin: 0;
+    vertical-align: baseline;
+    max-height: 1000000px;
+    -webkit-tap-highlight-color: transparent;
+    box-sizing: border-box;
+    background: 0 0;
+    text-decoration: none;
+    outline: 0;
+    cursor: pointer;
+    transition: color .2s ease;
+    color: #222;
+    line-height: 32px;
+}
+
+.title-box a:hover {
+    text-decoration: underline;
+    color: #1e6ddd;
+}
+
+.shuoshuo {
+    line-height: 33px;
+}
+
 .layui-btn-sm {
     font-size: 14px;
 }
@@ -19,6 +55,8 @@ body {
 
 #app {
     display: flex;
+    width: 1200px;
+    margin: 0 auto;
 }
 
 nav {
@@ -57,15 +95,15 @@ aside#left {
 }
 
 .logo {
-    font-size: 14px;
-    font-weight: 400;
+    color: #333;
+    font-size: 24px;
+    text-align: center;
+    font-family: 微软雅黑, Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 main {
     width: 680px;
-    margin-bottom: 30px;
-    margin-right: 20px;
-    margin-left: 180px;
+    margin: 0 25px 30px 185px;
 }
 
 .go-to-top {
